# tower-api-client

./: Cargo.toml  README.md
examples/: filter.rs  layers.rs  pagination.rs  progress.rs  simple.rs  tower.rs  tower_pagination.rs
src/: client.rs  error.rs  lib.rs  pagination.rs  request.rs
tests/integration/: data.rs  default_headers.rs  empty_response.rs  errors.rs  main.rs  post.rs
tests/integration/authorization/: basic.rs  bearer.rs  header.rs  query.rs
tests/integration/pagination/: initial_page.rs  path.rs  query.rs
tests/integration/utils/: mod.rs
