[package]
name = "tower-jsonapi-client"
version = "3.0.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/SebRollen/tower-jsonapi-client"
description = "Toolkit for creating JSON API clients with Tower"
keywords = ["client", "api"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
futures = "0.3"
hyper = "0.14.24"
hyper-tls = "0.5.0"
indicatif = { version = "0.17.0-beta", optional = true }
log = "0.4.14"
pin-project-lite = "0.2.9"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.12.0"
thiserror = "1.0"
tower = { version = "0.4.13", features = ["limit", "util"] }
url = "2.3.1"

[[example]]
name = "pagination"

[[example]]
name = "progress"
required-features = ["progress"]

[dev-dependencies]
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
stream-flatten-iters = "0.2"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"

[features]
default = []
progress = ["indicatif"]
