[package]
name = "tower-jsonapi-client"
version = "0.1.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SebRollen/tower-jsonapi-client"
description = "Toolkit for creating JSON API clients with Tower"
keywords = ["client", "api"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
base64 = "0.21"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
log = "0.4"
pin-project-lite = "0.2"
secrecy = "0.8.0"
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.12"
serde_urlencoded = "0.7"
thiserror = "1.0"
tower = { version = "0.4", features = ["filter", "limit", "util"] }
url = "2.3"

[[example]]
name = "simple"

[[example]]
name = "pagination"

[[example]]
name = "filter"

[dev-dependencies]
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
stream-flatten-iters = "0.2"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"

[features]
default = []
